# genymotion-mcp

./: README.md  pyproject.toml  server.py
